# uv_py_tmpl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml  type-check.yml
docs/: README.md
src/your_package_name/: __init__.py  main.py  sample.py
tests/: test_main.py  test_sample.py
